RESOLVED FIXED292086
[iOS] Multiple API tests are crashing due to Screen Time
https://bugs.webkit.org/show_bug.cgi?id=292086
Summary [iOS] Multiple API tests are crashing due to Screen Time
Aditya Keerthi
Reported 2025-04-25 19:33:26 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-25 19:33:35 PDT
Aditya Keerthi
Comment 2 2025-04-25 19:41:49 PDT
EWS
Comment 3 2025-04-25 19:53:30 PDT
Committed 294139@main (6bde53f3d482): <https://commits.webkit.org/294139@main> Reviewed commits have been landed. Closing PR #44545 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.