[iOS] Multiple API tests are crashing due to Screen Time https://bugs.webkit.org/show_bug.cgi?id=292086 rdar://150079005

Reviewed by Abrar Rahman Protyasha.

UIKit is experimenting with a scene-hosted remote view controller implementation.
However, since TestWebKitAPI is not a real app, there is no `UIScene`. As a result,
tests that spin up Screen Time's remote view crash as UIKit attempts to create a
`_UISceneHostingView` with a nil scene.

Fix by opting the Screen Time extension out of the experimental path.

* Tools/TestWebKitAPI/ios/mainIOS.mm:
(main):

Canonical link: https://commits.webkit.org/294139@main